Lesson3/Project/k8s/0.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-course
  labels:
    name: istio-course
