Lesson3/Project/k8s/2.0.book.yml
apiVersion: v1
kind: Service
metadata:
  name: books
  labels:
    app: books
    service: books
    project: istio-course
  namespace: istio-course
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: books
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-v1
  labels:
    app: books
    version: v1
    project: istio-course
  namespace: istio-course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books
      version: v1
      project: istio-course
  template:
    metadata:
      labels:
        app: books
        version: v1
        project: istio-course
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: servicemesh-books
      containers:
        - name: books
          image: pryshchepovvvp/books-service:1.0
          imagePullPolicy: IfNotPresent #Or use Always to download it from dockerhub
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "500M"
              cpu: "0.15"
            limits:
              memory: "1500M"
              cpu: "0.75"
