Lesson3/Project/k8s/1.3.authors-virtualsvc.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authors
  namespace: istio-course
spec:
  hosts:
  - authors
  http:
  - match:
    - headers:
        developer:
          exact: pryshchepov
    route:
    - destination:
        host: authors
        subset: v3
  - route:
    - destination:
        host: authors
        subset: v1
#      weight: 90
#    - destination:
#        host: authors
#        subset: v2
#      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: authors
  namespace: istio-course
spec:
  host: authors
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
