Lesson3/Project/k8s/1.4.authors-RANDOM-circuitbreaker.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authors
  namespace: istio-course
spec:
  hosts:
  - authors
  http:
  - match:
    - headers:
        developer:
          exact: pryshchepov
    route:
    - destination:
        host: authors
        subset: v3
  - route:
    - destination:
        host: authors
        subset: v1
      weight: 90
    - destination:
        host: authors
        subset: v2
      weight: 10


---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: authors
  namespace: istio-course
spec:
  host: authors
  trafficPolicy:
    trafficPolicy:
    loadBalancer:
      simple: RANDOM
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
