Lesson3/Project/k8s/4.course-gateway-controller.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: course-frontend-gateway
  namespace: istio-course
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: course-istio
  namespace: istio-course
spec:
  hosts:
  - "*"
  gateways:
  - course-frontend-gateway
  http:
  - match:
    - uri:
        prefix: /frontend-catalog/api/v1/
    rewrite:
        uri: /api/v1/
    route:
    - destination:
        host: frontend
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: course-istio-2
  namespace: istio-course
spec:
  hosts:
  - "*"
  gateways:
  - course-frontend-gateway
  http:
  - match:
    - uri:
        prefix: /authors/api/v1/authors
    rewrite:
        uri: /api/v1/authors
    route:
    - destination:
        host: authors
        port:
          number: 8080
